# gameoflife

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  run.sh
src/: main.c  settings.h  simulation.c  simulation.h  types.h  universe.c  universe.h
